<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/NameStyle" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname_edit"
            style="@style/NameStyle"
            android:textAlignment="center"
            android:hint="@string/what_is_your_nickname" />

    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="@dimen/layout_margin" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickname_text"
            style="@style/NameStyle"
            android:textAlignment="center"
            android:visibility="gone" />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image"
            android:contentDescription="@string/star_image_description" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bio_scroll">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@android:drawable/ic_menu_view"
                    android:id="@+id/avatar_image"
                    android:contentDescription="@string/avatar_image" />

            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bio_text"
                    style="@style/NameStyle"
                    android:lineSpacingMultiplier="@dimen/bio_line_spacing" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>